shifted svg icon overrides into YourSwap page, fixed positioning of ReactPlayer in Home page

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -9,5 +9,8 @@
   left: 0;
 }
 .content {
-  text-align: center;
+  max-width: 60%;
+  margin-left: 20%;
+  margin-top: 5%;
+  /* margin-right: 50%; */
 }
